--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -16,10 +16,10 @@ eventsMixin(Vue)
 // 在Vue原型上挂载了自定义事件相关方法：$on、$once、$off、$emit
 
 lifecycleMixin(Vue)
-// 在Vue原型上挂载了渲染DOM方法_update、重新渲染实例方法$forceUpdate、销毁实例方法$destroy
+// 在Vue原型上挂载了_update、$forceUpdate、$destroy等方法
 
 renderMixin(Vue)
-// 在Vue原型上挂载了用于创建vnode的_render方法、异步更新方法$nextTick
+// 在Vue原型上挂载了_render、$nextTick等方法
 // 以及_o、_n、_s、_l...等方法
 ```
 
