--- a/Vue源码/2.1-数据驱动-$mount方法.md
+++ b/Vue源码/2.1-数据驱动-$mount方法.md
@@ -25,7 +25,7 @@ function mountComponent (vm, el, hydrating) {
   vm.$el = el
 
   if (!vm.$options.render) {
-    // 渲染函数不存在, 则创建一个空的vnode对象
+    // 渲染函数不存在, 则使用创建空vnode对象的createEmptyVNode方法为它赋值
     vm.$options.render = createEmptyVNode
   }
   
@@ -38,8 +38,8 @@ function mountComponent (vm, el, hydrating) {
     vm._update(vm._render(), hydrating)
   }
 
-  // 实例化一个渲染watcher，回调函数的执行时机：
-  // 1. 初始化  2.vm实例中的监测的数据发生变化
+  // 实例化一个渲染watcher，回调函数updateComponent的执行时机分两种：
+  // 1. 初始化watcher实例时（即当前立即执行  2. vm实例中的监测的数据发生变化
   new Watcher(vm, updateComponent, noop, {
     before () {
       if (vm._isMounted && !vm._isDestroyed) callHook(vm, 'beforeUpdate')
@@ -69,9 +69,11 @@ function mountComponent (vm, el, hydrating) {
 关于`vm._update`、`vm._render`、`Watcher`的实现细节仍要待后续解答。
 
 ### 总结
-`$mount`方法本质上依靠`mountComponent`，而`mountComponent`通过实例化一个`Watcher`，在其监听数据变化的回调中通过执行：
+`$mount`方法本质上依靠了`mountComponent`，而`mountComponent`通过实例化一个`watcher`，在其监听数据变化的回调中通过执行：
 ```js
 vm._update(vm._render())
 ```
 
-从而完成整个渲染工作——`vm._render`将实例转换为虚拟`vnode`，而`vm._update`将虚拟`vnode`渲染更新为真正的DOM。
+来将vue实例挂载到DOM上，从而完成整个渲染工作，其中：
+1. `vm._render()`将实例转换为vnode
+2. `vm._update()`将vnode渲染更新为真正的DOM
