--- a/Vue源码/3.1-组件化-创建组件vnode的render方法.md
+++ b/Vue源码/3.1-组件化-创建组件vnode的render方法.md
@@ -1,11 +1,11 @@
-在数据驱动之外，Vue.js的另一个核心思想就是组件系统，接下来我们将分析Vue组件的原理。
+在数据驱动之外，Vue.js的另一个核心思想就是组件系统，接下来我们分析Vue的组件。
 
-同样的，Vue组件要渲染到页面中去，也需要经历将组件转为`vnode`、`vnode`转为DOM的过程，本节将分析如何将组件转换为对应的`vnode`。
+<!-- 同样的，Vue组件要渲染到页面中去，也需要经历将组件转为`vnode`、`vnode`转为DOM的过程，本节将分析如何将组件转换为对应的`vnode`。 -->
 
-如果还有印象，之前分析的用于创建`vnode`的`createElement`方法，在规范化`children`之后创建`vnode`时有这样一段逻辑：
+在上一小节中我们刚分析过，`createElement`方法在创建vnode时有这样一段逻辑：
 ```js
 function _createElement (context, tag, data, children, normalizationType) {
-  // 规范化children逻辑
+  // ... 规范化children逻辑
 
   // 创建vnode
   let vnode, ns
@@ -20,14 +20,14 @@ function _createElement (context, tag, data, children, normalizationType) {
       vnode = new VNode(tag, data, children, undefined, undefined, context)
     }
   } else {
-    // 组件vnode
+    // 根vnode
     vnode = createComponent(tag, data, context, children)
   }
   return vnode
 }
 ```
 
-对于以如下方式实例化Vue实例：
+Vue的组件系统允许我们直接在模板中使用组件或者在手写渲染函数时以组件作为`tag`参数传给`createElement`，比如：
 ```js
 import Vue from 'vue'
 import App from './App.vue'
@@ -38,15 +38,14 @@ var app = new Vue({
 })
 ```
 
-`_createElement`这里传入的`tag`对应的是一个`App`对象：
-
+`_createElement`这里传入的`tag`对应的是一个`App`对象，它对应的是一个组件：
 ![App](https://pic.downk.cc/item/5f57ac87160a154a67bb9b49.jpg)
 
-所以这里的逻辑会走到`createComponent(tag, data, context, children)`逻辑中去：
+所以`_createElement`的逻辑会走到`createComponent(tag, data, context, children)`逻辑中去：
 ```js
 // src/core/vdom/create-component.js
 function createComponent (Ctor, data, context, children, tag) {
-  // 根实例context.$options._base为Vue
+  // 根组件的context.$options._base为Vue
   const baseCtor = context.$options._base
   // 根据Ctor创建对应的组件构造函数
   if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
