--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -21,10 +21,9 @@ function createElm (
 }
 ```
 
-第一步就是尝试处理组件vnode对应的`patch`，普通vnode则会跳过此处`createComponent`的逻辑：
+第一步就是尝试处理组件vnode对应的`patch`，普通vnode则会跳过它。`createComponent`的逻辑：
 ```js
 function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
-  // 组件vnode.data不为空
   let i = vnode.data
   if (isDef(i)) {
     if (isDef(i = i.hook) && isDef(i = i.init)) {
