--- a/Vue源码/2.2-数据驱动-vnode和render方法.md
+++ b/Vue源码/2.2-数据驱动-vnode和render方法.md
@@ -1,11 +1,11 @@
-上一节提到`_render`方法用于将实例转换为`vnode`对象，`_update`将生成的`vnode`渲染成真实的DOM。本文分析`vnode`的生成。
+上一节提到vue实例的`_render`方法用于~~将实例转换为vnode~~生成vue实例对应的vnode，`_update`方法将生成的vnode渲染成真实的DOM，本文分析vnode的生成。
 
-在此之前，我们先来搞明白`vnode`是什么。
+在此之前，我们先来搞明白vnode是什么。
 
 ### 1.vnode是什么
 由于浏览器标准把真实DOM设计得非常复杂，频繁地更新DOM会产生性能问题，`virtual DOM`也就有了舞台——虚拟DOM是用于描述DOM节点的原生JavaScript对象。
 
-而在Vue.js中，`vnode`就是用来描述`virtual DOM`的：
+而在Vue.js中，`virtual DOM`的实现就是vnode：
 ```js
 // src/core/vdom/vnode.js
 class VNode {
@@ -30,10 +30,10 @@ class VNode {
 
 这里可以看到`VNode`中定义了一些关键属性——标签名、数据、子节点、键值等，其它属性都是用来扩展`VNode`的灵活性以及实现一些特殊的feature 。
 
-`vnode`的生成看起来很简单——只要通过调用`new VNode()`并提供一系列初始化数据，接下来是我们在之前提到过的用于生成`vnode`的`_render`方法。
+vnode的生成看起来很简单——只要通过调用`new VNode()`并提供一系列初始化数据，下面就来看一看之前提到过的`_render`方法是如何生成vnode的。
 
 ### 2.生成vnode的_render方法
-`_render`是实例的私有方法，它在`renderMixin(Vue)`执行时被挂载到`Vue`原型上，这一步是在构建平台确定时就已经确定的：
+`_render`是vue实例的私有方法，它是在`renderMixin(Vue)`时被挂载到`Vue`原型上（这一步是在构建平台确定时就已经确定的）：
 ```js
 // src/core/instance/render.js
 Vue.prototype._render = function () {
@@ -59,14 +59,14 @@ let vnode = render.call(vm._renderProxy, vm.$createElement)
 
 又涉及到两个重要的方法——`render`和`$createElement`：
 
-`render`来源于`options`：它可能是开发者手写的`render`，也可能是由`template`编译成的`render`。由模板生成`render`的case，在后面的分析中会单独做介绍，在这里暂讨论手写`render`的情况。
+`render`方法来源于`options`：它可能是开发者手写的`render`，也可能是由模板`template`编译成的`render`。由模板生成`render`的case，后面会单独做分析，在这里暂讨论手写`render`的情况。
 
-至于`vm.$createElement`，与Vue.js的官方文档中介绍的手写`render`函数提供的参数`createElement`：
+至于`vm.$createElement`，将它与官方文档中介绍的通过渲染函数创建vue实例所提到的`createElement`：
 ![render](https://pic.downk.cc/item/5f549704160a154a670e7a4e.jpg)
 
-做比较，即可发现手写`render`方法中提供的`createElement`对应的正是`vm.$createElement`方法。
+做比较，即可发现那里提到的`createElement`对应的正是这里的`vm.$createElement`方法。
 
-而`$createElement`是在`_init(vm)`阶段（创建Vue实例时）执行`initRender(vm)`时定义在实例上的：
+`vm.$createElement`是在vue实例初始化执行`_init(vm)`方法内的`initRender(vm)`时定义在实例上的：
 ```js
 // src/core/instance/render.js
 import { createElement } from '../vdom/create-element'
@@ -77,7 +77,7 @@ function initRender (vm) {
 }
 ```
 
-可以看到除了`$createElement`方法，实例上还定义了`vm._c`方法——这个是在`render`方法来自模板编译生成情况下使用的，而`$createElement`是在`render`方法来自手写情况下使用的，它们都是通过调用`createElement`实现的，区别在于最后一个参数分别为`true`和`false`：
+可以看到除了`$createElement`方法，实例上还定义了`vm._c`方法——这个方法是在`render`方法来自模板编译生成情况下使用的，而`$createElement`是在`render`方法来自手写情况下使用的，它们都是通过调用`createElement`实现的，区别在于最后一个参数分别为`true`和`false`：
 ```js
 // src/core/vdom/create-element
 function createElement (context, tag, data, children, normalizationType, alwaysNormalize) {
@@ -93,7 +93,9 @@ function createElement (context, tag, data, children, normalizationType, alwaysN
 }
 ```
 
-`createElement`做了一层封装，如果`data`是数组或者是原始类型，则将其作为`children`处理，紧接着传给`_createElement`处理：
+> 当data为Array或基本数据类型时处理为children，主要是针对通过手写渲染函数创建Vue实例时不提供data的场景：render: h => h('div', 123)，认为无data
+
+可以看到`createElement`只是做了一层封装，本质还是对`_createElement`的调用：
 ```js
 // src/core/vdom/create-element
 function _createElement (context, tag, data, children, normalizationType) {
@@ -126,7 +128,7 @@ function _createElement (context, tag, data, children, normalizationType) {
 - `vnode`的创建
 
 #### 2.1 children规范化
-`_createElement`方法接收的参数`children`可能是任意类型的，因此需要将它规范成`VNode`类型：
+`_createElement`方法接收的参数`children`可能是任意类型的，因此需要先将它们规范成`VNode`类型：
 ```js
 if (normalizationType === ALWAYS_NORMALIZE) {
   // render来自手写
@@ -208,8 +210,8 @@ function normalizeArrayChildren (children, nestedIndex) {
 }
 ```
 
-这里主要做了两件事情：对`children`为数组的进行递归处理以及合并相邻`TextVNode`，形如前面给出手写`render`的例子：
-![children为规范化](https://pic.downk.cc/item/5f5497ae160a154a670ea5c3.jpg)
+这里主要做了两件事情：对`children`为数组的进行递归处理以及合并相邻`TextVNode`，比如前面给出手写`render`的例子：
+![手写render](https://pic.downk.cc/item/5f5497ae160a154a670ea5c3.jpg)
 
 这里的`children`将会被处理为：
 ![children规范化](https://pic.downk.cc/item/5f54982d160a154a670ec053.jpg)
@@ -217,7 +219,7 @@ function normalizeArrayChildren (children, nestedIndex) {
 可以看到，`"嘿嘿"`和`"第二个"`两个文本节点被合并为一个vnode。总之，经过对`children`的规划化处理之后，`children`的每一项都为`VNode`类型对象。
 
 #### 2.2 vnode的创建
-回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作就是创建`vnode`实例了：
+回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作就是最关键的创建vnode：
 ```js
 let vnode
 if (typeof tag === 'string') {
@@ -227,7 +229,7 @@ if (typeof tag === 'string') {
     // tag是否为内置标签
     vnode = new VNode(tag, data, children, undefined, undefined, context)
   } else if (isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
-    // 如果是注册的组件名，则通过createComponent创建组件类型的vnode
+    // 如果tag对应的是注册的组件名，则通过createComponent创建组件类型的vnode
     vnode = createComponent(Ctor, data, context, children, tag)
   } else {
     vnode = new VNode(tag, data, children, undefined, undefined, context)
@@ -238,10 +240,20 @@ if (typeof tag === 'string') {
 }
 ```
 
-这里的`vnode`主要分为普通类型和组件类型，通过`createComponent`创建组件类型`vnode`的过程将在后面组件化中分析，前面给出的手写`render`创建的`vnode`最终如下：
+这里的vnode主要分为普通类型和组件类型，前面给出的手写`render`创建的普通的vnode最终如下：
 ![vnode](https://pic.downk.cc/item/5f549939160a154a670ef6d7.jpg)
 
-### 总结
-至此，我们大致了解了`_render`方法创建`vnode`的过程。每个`vnode`都有`children`，而`children`的每个元素又是一个`vnode`，这样就形成了一个`VNode Tree`，它可以简单的描述对应的`DOM Tree`。
+通过`createComponent`创建组件类型vnode的过程会在后面组件化中分析。
 
-接下来将分析把这个`vnode`渲染成真实的`DOM`的过程——`vm._update(vnode)`。
+### 总结
+至此，我们大致了解了实例的`_render`方法创建vnode的过程。每个vnode都有`children`，而`children`的每个元素又是一个vnode，这样就形成了一个`VNode Tree`，它可以简单的描述对应的`DOM Tree`。
+
+在这个过程中，要清醒的是，**实例vm和vnode是什么关系**？vnode是实例调用自身的`_render`方法生成的:
+```js
+let vnode = render.call(vm._renderProxy, vm.$createElement)
+```
+
+1. 开发者声明实例时提供的`render`（可能来自模板编译，也可能是来自手写）描述了实例的数据、DOM结构、事件等
+2. `render`通过将这些描述信息作为参数传递给`$createElement`生成真正的vnode
+
+接下来将分析把这个vnode渲染成真实DOM的过程——`vm._update(vnode)`。
