--- a/开发总结/异常监控.md
+++ b/开发总结/异常监控.md
@@ -5,3 +5,4 @@
 
 ### 参考
 1. [一步一步搭建前端监控系统：如何监控资源加载错误？](https://blog.fundebug.com/2019/08/17/how-to-monitor-resource-error/)
+2. [如何优雅处理前端异常？](http://jartto.wang/2018/11/20/js-exception-handling/)
