--- a/开发总结/异常监控.md
+++ b/开发总结/异常监控.md
@@ -1,8 +1,111 @@
-之前我们分析了JavaScript错误以及JavaScript异常的捕获，而对于前端来说，我们会面对的异常还有：
-1. ajax异常
-2. 静态资源加载异常
-3. Promise异常
+之前我们分析过JavaScript错误以及通过`try/catch`进行JavaScript异常的捕获，但是使用`try/catch`有两个问题：
+1. 一是`try/catch`一般使用在JavaScript代码可能执行出错的地方，这些错误对于开发者来说是可预见的，但我们不可能将前端的JavaScript全部写在一个`try/catch`内，而如果处处使用`try/catch`又会导致代码不够简洁；
+2. 二是`try/catch`无法处理非JavaScript执行错误（静态资源加载异常、ajax异常...)
 
+这里有一个矛盾的地方：一方面我们希望JavaScript代码尽量如我们所期待的运行，使用`try/catch`做异常的特殊处理；另一方面处处使用`try/catch`导致代码不够简洁。
+
+至于如何做权衡，我的理解是在可能导致交互出现重大错误、用户界面崩溃的地方做异常的捕获，其他情况下则允许错误发生，允许异常被抛出，我们只要将异常上报，方便开发定位复现Bug即可，所以这里我们只讨论如何做前端异常的监控。
+
+### window.onerror
+当JavaScript执行发生错误时，window会触发error事件（来自MDN: [GlobalEventHandlers.onerror](https://developer.mozilla.org/zh-CN/docs/Web/API/GlobalEventHandlers/onerror)）：
+```js
+/*@param message 错误信息
+* @param source 发生错误的脚本URL
+* @param lineno 发生错误的行号
+* @param colno 发生错误的列号
+* @param error Error对象，包含了错误的所有信息
+*/
+window.onerror = function (message, source, lineno, colno, error) {
+  console.log('通过window.onerror监测到异常：')
+  console.log('message', message)
+  console.log('source', source)
+  console.log('lineno', lineno)
+  console.log('colno', colno)
+  consle.log('error', error)
+}
+
+console.log(a)
+```
+
+结果如下：
+![window.onerror](https://img.imgdb.cn/item/600d97b23ffa7d37b385fe11.jpg)
+
+**正是由于没有对抛出的异常做捕获，所以可以触发`window.onerror`事件**，如果异常在`catch`中被捕获且不做抛出的话，则无法在`window.onerror`上监测到。
+
+另外，`window.onerror`返回`true`时，可以阻止异常继续被抛出：
+```js
+// errorHandle.js
+window.onerror = function (message, source, lineno, colno, error) {
+  console.log('通过window.onerror监测到异常')
+  // ...异常上报
+
+  // 阻止异常抛出
+  return true
+}
+
+// index.js
+console.log(a)
+```
+
+### window.addEventListener
+当一项资源（`<img>`或`<script>`）加载失败，**加载资源的元素**会触发一个`error`事件。不幸的是，**error事件不会冒泡到window上**，所以网络资源加载加载的异常无法触发`window.onerror`，只能在对应的`<img>`或`<script>`元素的`onerror`回调上做监控。
+
+在每一个可能会导致网络请求异常的标签上做`error`事件的监听显然不是一个好的办法，`error`事件虽然不会冒泡到`window`上，但是我们可以通过`window.addEventListener`在**事件捕获**阶段监测到它们：
+```js
+// errorHandle.js
+window.addEventListener('error', event => {
+  console.log('通过addEventListener捕获异常：', event)
+
+  // 同样阻止默认事件，阻止异常的抛出
+  // event.preventDefault()
+  // true表示捕获阶段，默认为false
+}, true)
+```
+
+JavaScript资源加载失败捕获如下：
+![addEventListener捕获资源加载异常](https://img.imgdb.cn/item/60106c4f3ffa7d37b3c9115c.jpg)
+
+可以在`event.srcElemet`上获取加载异常的JavaScript脚本的资源地址。
+
+当然，除了监测资源加载失败，`window.addEventListener`也可以监测到JavaScript执行出错：
+![addEventListener捕获JavaScript执行错误](https://img.imgdb.cn/item/60106ecf3ffa7d37b3c9a6d0.jpg)
+
+同样可以通过`event.preventDefault()`阻止事件默认行为，阻止异常继续抛出。
+
+### Promise的rejected异常
+Promise对象状态被置为`rejected`时会抛出异常，这个异常通过`window.onerror`、`window.addEventListener`均无法捕捉到，只能通过Promise对象的`promise.catch`捕获。与`try/catch`一样，编写每一个Promise对象都在最后添加`catch`有些啰嗦，我们仍可以允许`Promise.reject()`导致的异常的抛出，通过对Promise全局`unhandledrejection`事件捕获异常：
+```js
+// errorHandle.js
+window.addEventListener("unhandledrejection", e => {
+  console.log('通过全局unhandledrejection监听捕获到异常：', e);
+  e.preventDefault()
+})
+
+// index.js
+new Promise((res, rej) => {
+  setTimeout(() => {
+    rej('我要让它失败')
+  }, 1000)
+})
+// rejected异常如果被catch捕获就不会继续抛出
+// }).catch(err => {
+//   console.log(err)
+// })
+```
+![unhandledrejection监听Promise失败异常](https://img.imgdb.cn/item/6011969d3ffa7d37b35197ea.jpg)
+
+### 跨域JavaScript
+由于浏览器的安全策略，跨域JavaScript脚本执行出错时，无论是`window.onerror`还是`window.addEventListener`均无法捕获到异常的具体信息：
+![跨域Script Error](https://img.imgdb.cn/item/6011a2223ffa7d37b356fcaf.jpg)
+
+需要对跨域的脚本设置`crossOrigin`属性才能捕获其执行出现的异常：
+```js
+<script src="http://balabala.com/static/test.js" crossorigin>
+```
+
+### Vue组件内业务JavaScript错误
+
+___
 ### 参考
 1. [一步一步搭建前端监控系统：如何监控资源加载错误？](https://blog.fundebug.com/2019/08/17/how-to-monitor-resource-error/)
 2. [如何优雅处理前端异常？](http://jartto.wang/2018/11/20/js-exception-handling/)
