--- a/前端乱七八糟的知识/图片懒加载.md
+++ b/前端乱七八糟的知识/图片懒加载.md
@@ -1,15 +1,15 @@
-## 传统处理方式
+### 1. 传统处理方式
 图片懒加载是指在长网页中，在用户将图片滚动到可视区域内时再去加载它们。
 大概思路：
 1. 将图片的src属性置空，真实资源路径放到图片标签的其他属性（或变量）中
 2. 监听页面滚动，当图片出现在可视区域内，用真实资源路径重写图片的src属性
 
-### 1. src属性置空
+#### 1.1 src属性置空
 ```html
 <img class="lazy-img" src="" data-src="http://demo.img">
 ```
 
-### 2. 监听页面滚动，判断图片是否进入可视区域
+#### 1.2 监听页面滚动，判断图片是否进入可视区域
 ```js
 // 使用节流优化事件处理
 import throttle from 'debounce'
@@ -29,7 +29,7 @@ function watchScroll () {
 document.addEventListener('scroll', throttle(watchScroll, 200))
 ```
 
-## 交叉观察者 IntersectionObserver
+### 2. 交叉观察者 IntersectionObserver
 对scroll事件的监听（即便使用了节流仍然）会导致大量计算，以及`setTimeout`的使用仍然存在性能问题。
 
 2016年，chrome实现了一个新的API —— `IntersectionObserver`：
@@ -42,7 +42,7 @@ document.addEventListener('scroll', throttle(watchScroll, 200))
 const observer = new IntersectionObserver(callback, options) 
 ```
 
-### 1. callback
+#### 2.1 callback
 其中`callback`代表当被监听的元素**可见性发生变化时**触发的回调函数， `callback`接收一个`entries`参数，表示当前已监听并且发生了交叉的目标集合，集合中的对象`IntersectionObserverEntry`长这个样子：
 ```json
 {
@@ -75,7 +75,7 @@ const observer = new IntersectionObserver(callback, options)
 - isIntersecting: 一个布尔值，表示目标元素与根元素是否相交
 - isVisable：网上冲浪找到的资料均表示这个字段为布尔值，用于描述目标元素是否可见——本人实际测试时此字段总是为`false`，为什么和文档描述不一致待考察。
 
-### 2. options
+#### 2.2 options
 构造函数的第二个参数是一个配置对象：
 - `threshold`：
   `threshold`属性决定了什么时候触发回调函数。它是一个数组，每个成员都表示一个阈值，默认为[0]，即交叉比例（intersectionRatio）达到0时触发回调函数。
@@ -92,7 +92,7 @@ const observer = new IntersectionObserver(callback, options)
 - `root`：所监听对象的具体根素。如果未传入值或值为null，则默认使用顶级文档的视窗(一般为html)
 - `rootMargin`：计算交叉时添加到根(root)边界盒bounding box的矩形偏移量，可以有效控制根元素的判定范围从而满足计算需要。所有的偏移量均可用像素(px)或百分比(%)来表达, 默认值为"0px 0px 0px 0px"。
 
-### 3. 方法
+#### 2.3 方法
 上述构造函数返回一个观察器实例，观察器原型上有以下方法：
 ```js
 // 开始观察
@@ -105,7 +105,7 @@ observer.unobserver(img)
 observer.disconnect()
 ```
 
-### 4. 回归需求：
+#### 2.4 回归需求：
 ```js
 const observer = new IntersectionObserver(function (entries) {
   entries.forEach(function (entry) {
@@ -127,7 +127,7 @@ imgs.forEach(img => observer.observe(img))
 
 `IntersectionObserver`的实现，应该采用`requestIdleCallback()`，即只有主线程空闲下来，才会执行观察器。这意味着，这个观察器的优先级非常低。
 
-### 浏览器支持情况
+#### 2.5 浏览器支持情况
 ![IntersectionObserver浏览器支持情况](https://pic.downk.cc/item/5ece0196c2a9a83be55692c1.jpg)
 
 对于不支持的浏览器，可以使用`polyfill`来作兼容。
