--- a/开发总结/异常监控.md
+++ b/开发总结/异常监控.md
@@ -57,7 +57,7 @@ window.addEventListener('error', event => {
   console.log('通过addEventListener捕获异常：', event)
 
   // 同样阻止默认事件，阻止异常的抛出
-  // event.preventDefault()
+  event.preventDefault()
   // true表示捕获阶段，默认为false
 }, true)
 ```
@@ -104,8 +104,70 @@ new Promise((res, rej) => {
 ```
 
 ### Vue组件内业务JavaScript错误
+Vue组件内的**同步代码**执行出错时，Vue的处理是将错误传递至全局`Vue.config.errorHandler`配置函数，而不会抛到window上。这个处理函数被调用时，可获取错误信息和Vue实例：
+```js
+Vue.config.errorHandler = function (err, vm, info) {
+  console.log('通过vue errorHandler捕获的错误:')
+  console.log(err)
+  console.log(vm)
+  console.log(info)
+  console.log('-------------')
+}
+
+// 某个组件
+created () {
+  const a = 2
+  console.log(a.split(2)
+}
+```
+
+![Vue.config.errorHandler](https://img.imgdb.cn/item/601fb1193ffa7d37b30fa17f.jpg)
+
+而Vue组件内的异步代码的错误仍然会被抛到window对象上，之前的方案仍然work。
+
+### React组件内业务JavaScript错误
+在`React 15.x`及之前的版本中，组件内的异常有可能会影响到React的内部状态，进而导致下一轮渲染时出现未知错误。这些组件内的异常往往也是由代码本身抛出，在`React 15.x`之前版本的异常处理是交托给了开发者操作，在`React 16.x`版本中，引入了`Error Boundary`的概念，从而保证了发生在视图层的错误不会连锁导致整个应用程序崩溃；未被任何异常边界捕获的异常可能会导致整个React组件树被卸载。所谓的异常边界即指某个能够捕获它的子元素（包括嵌套子元素等）抛出的异常，并且根据用户配置进行优雅降级地显示而不是导致整个组件树崩溃。异常边界能够捕获渲染函数、生命周期回调以及整个组件树的构造函数中抛出的异常。
+
+通过为组件添加`componentDidCatch`生命周期回调来使其成为异常边界：
+```js
+// 定义公共的异常捕获组件
+class ErrorBoundary extends React.Component {
+  construtor (props) {
+    super(props)
+    this.state = {
+      hasError: false
+    }
+  }
+  componentDidCatch (error, info) {
+    this.setState({ hasError: true })
+    // 控制子组件的视图状态
+    // 上报错误
+  }
+  render() {
+    if (this.state.hasError) {
+      // 展示错误页面
+    } else {
+      // 正常渲染子组件
+      return this.props.children;
+    }
+  }
+}
+
+// 使用ErrorBoundary
+<ErrorBoundary>
+  <MyComponent />
+</ErrorBoundary>
+```
+
+`componentDidCatch`有两个问题：
+- Class组件生命周期的写法，在`React Hooks`中无法使用
+- 无法捕获异步异常
+
+### 总结
+总的来看，监听window对象上的`error`和`unhandledrejection`事件，再结合框架提供的api能够捕获到大部分异常。
 
 ___
 ### 参考
 1. [一步一步搭建前端监控系统：如何监控资源加载错误？](https://blog.fundebug.com/2019/08/17/how-to-monitor-resource-error/)
 2. [如何优雅处理前端异常？](http://jartto.wang/2018/11/20/js-exception-handling/)
+3. [React 16 中的异常处理](https://zhuanlan.zhihu.com/p/28156587)
