--- a/浏览器工作原理/渲染优化.md
+++ b/浏览器工作原理/渲染优化.md
@@ -1,13 +1,17 @@
 ![transfrom](https://img.imgdb.cn/item/600337623ffa7d37b32814d0.png)
 
-### 渲染性能优化
-1. 减少reflow和repaint
-2. 避免阻塞渲染
+#### 1. 重排和重绘
+触发`repaint`、`reflow`的操作尽量放在一起，比如改变元素高度和设置`margin`分开写，可能会触发两次重排。
+
+#### 2. JavaScript与UI线程互斥
+
+#### 3. 动画
+使用CSS的transform来实现动画效果，这可以避开重排和重绘阶段，直接在非主线程上执行合成动画操作。这样的效率是最高的，因为是在非主线程上合成，并没有占用主线程的资源，另外也避开了布局和绘制两个子阶段，所以相对于重绘和重排，合成能大大提升绘制效率
 
 ### 参考
 1. [浅析渲染引擎与前端优化](https://jdc.jd.com/archives/2806)
 2. [从8道面试题看浏览器渲染过程与性能优化](https://juejin.im/post/5e143104e51d45414a4715f7)
 3. [浏览器的渲染过程之Composite](https://zhuanlan.zhihu.com/p/79881310)
-4. [——gpu到底是加速还是合成？](https://www.jianshu.com/p/88278b1516fe)
+4. [gpu到底是加速还是合成？](https://www.jianshu.com/p/88278b1516fe)
 5. [浏览器层合成与页面渲染优化](https://juejin.cn/post/6844903966573068301)
 6. [aaaa](https://segmentfault.com/a/1190000014520786)
