docs: Vue options -> vnode -> DOM

--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -2,12 +2,12 @@
 沿着`Vue`的引用一路向上追寻，最终可以在`src/core/instance/init.js`下找到`Vue`的最初定义,它本质上是一个用`Function`实现的类：
 ```js
 function Vue (options) {
-  // 创建Vue实例的入口，_init方法是在initMixin内实现的
+  // 创建Vue实例的入口，_init方法是通过initMixin(Vue)挂载在Vue原型上的
   this._init(options)
 }
 
 initMixin(Vue)
-// 在Vue原型上挂载了一个_init方法——_init方法在new Vue(options)时执行
+// 在Vue原型上挂载了一个_init方法——而_init方法又在new Vue(options)时调用
 
 stateMixin(Vue)
 // 在Vue原型上挂载了数据相关属性和方法：$data、$props，$set、$delete、$watch
@@ -26,7 +26,7 @@ renderMixin(Vue)
 读到`function Vue () {}`的时候不免会想这样一个问题——Vue的定义为什么不以ES6 Class的形式去实现？从接下来的一系列`mixin(Vue)`操作可以看出来——Vue按功能的实现把它们分散到多个模块中，以操作原型对象的方式补充进去，有利于Vue的维护升级，这是用Class无法做到的。
 
 ### _init(Vue)做了什么
-`_init`方法是在`initMixin(Vue)`执行时被挂载到`Vue`原型对象上的：
+上面的代码注释中已经标注出，`_init`方法是通过`initMixin(Vue)`挂载到`Vue`原型对象上的：
 ```js
 function initMixin (Vue) {
   Vue.prototype._init = function (options) {
@@ -34,13 +34,13 @@ function initMixin (Vue) {
     // 每个Vue实例都会有一个递增唯一的id标识
     vm._uid = uid++
 
-    // 所有Vue的实例都被标记_isVue = true，它的作用是避免实例被响应系统observe（哪些对象应该被observe
+    // 所有Vue的实例都被标记_isVue = true，它的作用是避免实例被响应系统observe
     vm._isVue = true
 
     // 将初始化实例提供的options、构造函数上的静态options合并到实例的$options上
     if (options && options._isComponent) {
       // _isComponent表示创建的是子组件实例，在3.2小节会再次讲到这一点
-      // 因为动态选项合并非常慢，而且没有一个内部组件选项，需要特殊处理?
+      // 因为动态选项合并非常慢，而且没有一个内部组件选项，需要特殊处理
       initInternalComponent(vm, options)
     } else {
       // 普通实例，合并options给vm.$options
@@ -88,13 +88,11 @@ function initMixin (Vue) {
 }
 ```
 
-以上，`_init(options)`方法做了以下这几件事情：
-- 合并配置
-- 初始化生命周期
-- 初始化渲染
-- 初始化data、props、computed、watcher等
-- 最后，通过`$mount`方法挂载`Vue`实例，从而做到将模板+数据渲染成为最终的`DOM`。
+以上，`_init(options)`方法执行时会做以下这几件事情：
+- 合并传入的配置
+- 初始化Vue实例的生命周期
+- 初始化Vue实例的渲染方法（供render调用的createElement方法
+- 初始化Vue实例的data、props、computed、watcher等
+- 最后，通过原型方法`$mount`生成实例对应的vnode并创建对应的DOM更新到页面上。
 
-回头再看一遍，这里的`_init`方法是在`initMixin(Vue)`执行时挂载到`Vue`原型对象上去的，`_init`方法在实例化`Vue`对象时得以执行。
-
-至此，`Vue`构造器的定义大致分析结束，`Vue`本质上就是一个用`Function`实现的`Class`，Vue.js按功能在各模块中拓展了`Vue`原型及`Vue`对象本身的属性及方法，具体的功能拓展在后文中分析。
+至此，`Vue`构造器的定义大致分析结束，`Vue`本质上就是一个用`Function`实现的`Class`，Vue.js按功能在各模块中拓展了`Vue`原型对象及在`Vue`上实现了一些静态属性及方法，具体的功能拓展在后文中分析。
