--- a/Vue源码/2.1-数据驱动-$mount方法.md
+++ b/Vue源码/2.1-数据驱动-$mount方法.md
@@ -25,7 +25,7 @@ function mountComponent (vm, el, hydrating) {
   vm.$el = el
 
   if (!vm.$options.render) {
-    // 渲染函数不存在, 则使用创建空vnode对象的createEmptyVNode方法为它赋值
+    // 渲染函数不存在, 则使用创建空vnode对象的createEmptyVNode方法替代
     vm.$options.render = createEmptyVNode
   }
   
