--- a/Vue源码/2.3-数据驱动-update方法.md
+++ b/Vue源码/2.3-数据驱动-update方法.md
@@ -1,4 +1,4 @@
-上节已经提到，`_update`方法用于将`vnode`渲染成真实的`DOM`。`lifecycleMixin(Vue)`时在Vue原型上挂载了`_update`方法：
+上节已经提到，`_update`方法是用于将vnode渲染成真实DOM的，它是通过`lifecycleMixin(Vue)`挂载到Vue原型上的：
 ```js
 // src/core/instance/lifecycle.js
 Vue.prototype._update = function (vnode, hydrating) {
@@ -26,7 +26,7 @@ Vue.prototype._update = function (vnode, hydrating) {
 }
 ```
 
-可以看到，`_update`方法通过调用`vm.__patch__`生成/更新真实`DOM`，然后将它赋值给`vm.$el`。与`$mount`方法一样，`__patch`的实现与平台有关——这里仅分析`web`平台：
+可以看到，`_update`最终通过使用`vm.__patch__`生成/更新的真实DOM去更新`vm.$el`来实现vnode到DOM的转换的。与原型范方法`$mount`一样，`__patch`的实现也与平台有关：
 ```js
 // src/platforms/web/runtime/index.js
 import { patch } from './patch'
@@ -34,7 +34,7 @@ import { patch } from './patch'
 Vue.prototype.__patch__ = inBrowser ? patch : noop
 ```
 
-由于在服务端渲染中，没有真实的浏览器`DOM`环境，不需要把`vnode`最终转换成`DOM`，因此在服务端渲染中`vm.__patch__`是一个空函数。浏览器渲染中，`__patch__`指向了`patch`方法：
+由于在服务端渲染中，没有真实的DOM环境，不需要把vnode最终转换成DOM，因此在服务端渲染中原型方法`__patch__`是一个空函数。而在客户端渲染场景下，`__patch__`指向了`patch`方法：
 ```js
 // src/platforms/web/runtime/patch.js
 const modules = platformModules.concat(baseModules)
@@ -44,9 +44,9 @@ const patch = createPatchFunction({ nodeOps, modules })
 
 可以看到，`patch`方法是由`createPatchFunction`方法生成的，这里传入了两个参数：
 - `nodeOps`：封装了一系列`DOM`操作的方法，如创建、插入、移除等
-- `modules`：创建真实DOM也需要生成它的class/attrs/style等属性，modules是一个数组集合，数组的每一项都是这些属性对应的钩子方法，这些属性的创建、更新、销毁等都有对应钩子方法。比如它们都有create这个钩子方法，如将这些create钩子收集到一个数组内，需要在真实DOM上创建这些属性时，依次执行数组的每一项，也就是依次创建了它们。
+- `modules`：创建真实DOM也需要生成它的class/attrs/style等属性，modules是一个数组集合，数组的每一项都是这些属性对应的**钩子**方法——这些属性的创建、更新、销毁等都有对应钩子。比如它们都有create这个钩子方法，如将这些create钩子收集到一个数组内，需要在真实DOM上创建这些属性时，依次执行数组的每一项，也就是依次创建了它们。
 
-在`createPatchFunction`方法内部，声明了很多辅助方法，最终返回了一个`patch`方法，这个方法正是`vm._update`方法内调用的`vm.__patch__`方法。
+在`createPatchFunction`方法内部，声明了很多辅助方法，最终返回了一个根据vnode创建DOM的`patch`方法：
 ```js
 //  src/core/vdom/patch.js
 const hooks = ['create', 'activate', 'update', 'remove', 'destroy']
@@ -143,7 +143,7 @@ function createPatchFunction (backend) {
 
 可以看到`patch`流程中的分支有很多：
 - Vue diff更新
-- 浏览器端首次渲染`vnode`
+- 浏览器端首次渲染vnode
 - 服务端渲染
 
 这里仅分析浏览器中首次渲染的逻辑，其他分支的逻辑在后续的模块中再分析，`vm.__patch__(vm.$el, vnode, hydrating, false)`将会走到这段逻辑中（上面的代码注释中已给出走位）：
@@ -157,7 +157,7 @@ createElm(vnode, insertedVnodeQueue, oldElm._leaveCb ? null : parentElm, nodeOps
 function createElm (vnode, insertedVnodeQueue, parentElm, refElm, nested, ownerArray, index) {
   vnode.isRootInsert = !nested
 
-  // createComponent方法用于尝试以组件方式update，如果可以则返回true——跳过后续的普通vnode的update
+  // createComponent方法用于尝试以组件方式update，如果可以则DOM处理完毕
   if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) return
 
   const data = vnode.data
@@ -191,9 +191,9 @@ function createElm (vnode, insertedVnodeQueue, parentElm, refElm, nested, ownerA
 ```
 
 `createElm`分别做了以下工作：
-- 调用`createComponent`尝试以组件vnode做`update`，这个方法将在组件化模块中分析
-- 根据`vnode.tag`创建对应的`DOM`元素（`nodeOps.createElement`）来初始化`vnode.elm`
-- 调用`createChildren`创建子`vnode`对应的DOM
+- 通过`createComponent`尝试以组件vnode做`update`操作，这个方法将在组件化模块中分析
+- 根据`vnode.tag`创建对应的DOM元素（`nodeOps.createElement`）来初始化`vnode.elm`
+- 调用`createChildren`创建子vnode对应的DOM
 - `invokeCreateHooks`执行钩子
 - 调用`insert`将`node.elm`插入父节点
 
@@ -215,7 +215,7 @@ function createChildren (vnode, children, insertedVnodeQueue) {
 
 `createChildren`中遍历`children`：
 - 开发环境下检查`key`
-- 递归调用`createElm`方法创建各`vnode`对应的DOM
+- 递归调用`createElm`方法创建各vnode对应的DOM
 
 递归直到`children`为空结束。
 
@@ -235,7 +235,7 @@ function insert (parent, elm, ref) {
 }
 ```
 
-由于是深度优先遍历，子`vnode`会优先调用`insert`，所以整个`vnode`树的插入顺序是先子后父。
+由于是深度优先遍历，子vnode会优先调用`insert`，所以整个`Vnode Tree`的插入顺序是先子后父。
 
 #### 3. invokeCreateHooks
 在`createElm`流程中，在将创建的DOM插入到父节点之前还有一个重要的步骤——`invokeCreateHooks`：
@@ -257,4 +257,6 @@ function invokeCreateHooks (vnode, insertedVnodeQueue) {
 ### 总结
 ![Vue渲染过程](https://pic.downk.cc/item/5f51fcd3160a154a67796338.png)
 
-至此我们从主线上把`render`如何生成`vnode`、如何根据`vnode`创建DOM的过程分析完毕。本节分析了初始化`Vue`实例到渲染DOM的简单的场景，数据变化引起的`update`、组件生成`vnode`等过程还要在后续的代码分析中解答。
+本节分析了初始化Vue实例场景下的`_update`，数据变化引起的`_update`、组件的`_update`等过程还要在后续的代码分析中解答。
+
+至此我们从主流程上把原型方法`_render`如何生成虚拟节点vnode、Vue如何根据vnode创建DOM的过程分析完毕。
