--- a/浏览器工作原理/渲染优化.md
+++ b/浏览器工作原理/渲染优化.md
@@ -1,12 +1,19 @@
-![transfrom](https://img.imgdb.cn/item/600337623ffa7d37b32814d0.png)
+#### 1. 避免阻塞渲染
+GUI渲染线程与JS引擎是互斥的，当JS引擎执行JavaScript代码时GUI线程会被挂起，GUI更新会被保存在一个队列中等到JS引擎空闲时立即被执行。
 
-#### 1. 重排和重绘
+#### 2. 减少重排和重绘
+##### 2.1 减少DOM操作
 触发`repaint`、`reflow`的操作尽量放在一起，比如改变元素高度和设置`margin`分开写，可能会触发两次重排。
 
-#### 2. JavaScript与UI线程互斥
+##### 2.2 GPU加速
+![transfrom](https://img.imgdb.cn/item/600337623ffa7d37b32814d0.png)
 
-#### 3. 动画
 使用CSS的transform来实现动画效果，这可以避开重排和重绘阶段，直接在非主线程上执行合成动画操作。这样的效率是最高的，因为是在非主线程上合成，并没有占用主线程的资源，另外也避开了布局和绘制两个子阶段，所以相对于重绘和重排，合成能大大提升绘制效率
+
+##### 2.3 CSS样式加载
+在浏览器的渲染工作小节我们讲过，在CSSOM树和DOM树均构建完毕后，才会执行后续的构建渲染树、布局....合成显示，所以CSS样式的加载、解析构建的速度是影响页面呈现快慢的一个很重要的关键点。
+
+#### 3. XX?
 
 ### 参考
 1. [浅析渲染引擎与前端优化](https://jdc.jd.com/archives/2806)
@@ -15,3 +22,4 @@
 4. [gpu到底是加速还是合成？](https://www.jianshu.com/p/88278b1516fe)
 5. [浏览器层合成与页面渲染优化](https://juejin.cn/post/6844903966573068301)
 6. [aaaa](https://segmentfault.com/a/1190000014520786)
+7. [浏览器的渲染过程](https://zhuanlan.zhihu.com/p/74792085)
