--- a/Vue源码/2.0-数据驱动-Runtime Only版本和Compiler+Runtime版本.md
+++ b/Vue源码/2.0-数据驱动-Runtime Only版本和Compiler+Runtime版本.md
@@ -2,40 +2,29 @@ Vue.js基于源码构建的两个版本：
 - runtime only：只包含运行时的版本
 - runtime + compiler：同时包含编译器和运行时的版本
 
-从Vue.js的角度出发，这里的编译器所做的工作可以理解为将`template`模板编译转化为可执行的JavaScript脚本。
+从Vue.js的角度出发，这里的编译器所做的工作可以理解为将`template`模板编译转化为用于创建虚拟节点的`render`方法。
 
 ### Runtime only
-该版本只包含运行时版本涵盖了创建`Vue`实例、渲染并处理`Virtual Dom`等功能。`Runtime only`有两种使用场景：
-1. 在`options`中手写`render`函数去定义渲染过程：
-  ```js
-  // 不需要编译器
-  new Vue({
-    render(h) {
-      return h('div', this.title)
-    }
-  })
-  ```
-2. 利用`webpack`进行`Vue`的工程化开发时借助`vue-loader`这样的编译工具对`.vue`文件进行离线编译，尽管我们也可以利用`template`模板标签去书写代码，但是**此时的Vue已经不需要利用编译器去负责模板的编译工作**了，这个过程交给了`vue-loader`去实现。
+运行时版本，功能涵盖了创建`Vue`实例、渲染并处理vnode等功能。`Runtime only`版本有两类使用场景：
 
-  编译过程对性能会造成一定的损耗，并且由于加入了编译的流程代码，Vue代码的总体积也更加庞大(运行时版本相比完整版体积要小大约 30%)。因此在实际开发中，我们将对`Vue`模板的编译工作放到`webpack`的构建流程（**离线编译**）中去做，这样不仅减小了生产环境代码的体积，也提高了运行时的性能。
-
-### Runtime + compiler
-该版本下，可以通过指定`template`创建`Vue`实例：
-
+一个是在创建Vue实例时指定了`render`函数去定义如何创建vnode：
 ```js
-// 需要编译器
+// 不需要编译器
 new Vue({
-  template: '<div>{{ title }}</div>'
-})
-// or
-new Vue({
-  el: '#app'
+  render(h) {
+    return h('div', this.title)
+  }
 })
 ```
 
-`src/platform/web/entry-runtime-with-compiler.js`中增加了把模板编译成`render`的操作：
+另一个是在利用`webpack`进行工程化开发时借助`vue-loader`这样的编译工具对`.vue`文件进行离线编译，尽管我们也可以利用`template`模板去创建Vue实例，但是**此时已经不需要Vue利用编译器去负责模板的编译工作**了，这个过程交给了`vue-loader`去实现。
+
+编译的过程对性能会造成一定的损耗，并且编译模块逻辑代码也会导致Vue代码的总体积更加庞大(运行时版本相比完整版体积要小大约30%)。在实际开发中，我们一般将Vue模板的编译工作放到`webpack`的构建流程中去做，这样不仅减小了生产环境代码的体积，也提高了运行时的性能。
+
+### Runtime + compiler
+区别在于`src/platform/web/entry-runtime-with-compiler.js`中增加了把模板编译成`render`的操作：
 ```js
-// 带compiler版本的Vue.js重写$mount方法，需要缓存在src/platform/weex/runtime/index.js中定义的$mount方法
+// 重写了src/platform/weex/runtime/index.js中的$mount方法
 const mount = Vue.prototype.$mount
 
 // 为包含编译器和不包含编译器的版本提供不同的封装，最终调用的是上面缓存过的原型上的$mount方法
@@ -43,7 +32,7 @@ Vue.prototype.$mount = function (el, hydrating) {
   el = el && query(el)
   const options = this.$options
 
-  // 如果实例$options上未提供render方法，则需要将template或者el转换为render方法，这个过程就是模板编译
+  // 如果实例$options上未提供render方法，则通过指定的模板来生成render，生成render的过程就是模板编译
   if (!options.render) {
     let template = options.template || el.outerHTML
 
@@ -58,11 +47,13 @@ Vue.prototype.$mount = function (el, hydrating) {
 Vue.compile = compileToFunctions
 ```
 
-可以看到，这里对`$mount`进行了改写，做了`render`处理，最终调用的是缓存过的原型上的`$mount`方法。
+可以看到，带编译器的Vue.js通过对`$mount`进行的改写，做了一个模板编译生成`render`的处理。
 
 ### 总结
-`Runtime only`版本的Vue.js不做在线编译，创建`Vue`实例时需要开发者手动提供`render`，或者借助类似`vue-loader`工具在构建阶段完成离线编译工作。
+`Runtime only`版本的Vue.js不做在线编译，创建`Vue`实例时需要开发者手动提供`render`，或者借助类似`vue-loader`工具在构建阶段完成离线模板编译工作。
 
-而带`compiler`版本的Vue.js重写了原型上的`$mount`方法，在调用原型的`$mount`之前检查`render`是否存在，不存在则生成这个`render`方法，具体的`compileToFunctions`的过程会在后面编译部分具体分析。
+而带`compiler`版本的Vue.js通过重写`$mount`方法，做了`render`方法的生成，具体由模板生成`render`的过程会在后面编译部分具体分析。
 
-总之，无论是使用单文件`.vue`方式开发组件，还是写了`el`或者`template`属性，最终都会转换成`render`方法，所有组件的渲染最终都需要`render`方法，这是`Vue`的一个**编译**的过程。
+总之，无论是在单文件`.vue`中编写模板，还是以指定`el`或`template`字符串的形式指定模板，它们最终都会被转换成`render`方法，所有组件的渲染最终都需要`render`方法，这就是`Vue`的**编译**的过程。
+
+至于`render`是做什么用的，这里先提前说一下，它用来描述将要生成的vnode的具体信息。
