--- a/Vue源码/2.2-数据驱动-vnode和render方法.md
+++ b/Vue源码/2.2-数据驱动-vnode和render方法.md
@@ -1,9 +1,9 @@
-上一节提到vue实例的`_render`方法用于~~将实例转换为vnode~~生成vue实例对应的vnode，`_update`方法将生成的vnode渲染成真实的DOM，本文分析vnode的生成。
+上一节提到Vue实例的`_render`方法用于生成Vue实例对应的vnode，`_update`方法将生成的vnode渲染成真实的DOM，本文分析vnode的生成。
 
-在此之前，我们先来搞明白vnode是什么。
+在此之前，需要先了解vnode是什么，为什么会有这个东西。
 
 ### 1.vnode是什么
-由于浏览器标准把真实DOM设计得非常复杂，频繁地更新DOM会产生性能问题，`virtual DOM`也就有了舞台——虚拟DOM是用于描述DOM节点的原生JavaScript对象。
+由于浏览器标准把真实的DOM设计得非常复杂，频繁地更新DOM会产生性能问题，`virtual DOM`也就有了舞台——虚拟DOM是用于描述DOM节点的原生JavaScript对象。
 
 而在Vue.js中，`virtual DOM`的实现就是vnode：
 ```js
@@ -33,7 +33,7 @@ class VNode {
 vnode的生成看起来很简单——只要通过调用`new VNode()`并提供一系列初始化数据，下面就来看一看之前提到过的`_render`方法是如何生成vnode的。
 
 ### 2.生成vnode的_render方法
-`_render`是vue实例的私有方法，它是在`renderMixin(Vue)`时被挂载到`Vue`原型上（这一步是在构建平台确定时就已经确定的）：
+`_render`是Vue实例上的方法，它是通过`renderMixin(Vue)`挂载到Vue原型上的（这一步是在构建平台确定时就已经确定的）：
 ```js
 // src/core/instance/render.js
 Vue.prototype._render = function () {
@@ -59,14 +59,14 @@ let vnode = render.call(vm._renderProxy, vm.$createElement)
 
 又涉及到两个重要的方法——`render`和`$createElement`：
 
-`render`方法来源于`options`：它可能是开发者手写的`render`，也可能是由模板`template`编译成的`render`。由模板生成`render`的case，后面会单独做分析，在这里暂讨论手写`render`的情况。
+`render`方法来源于合并后的`vm.$options`，前面我们已经讲过，它可能来自开发者手，也可能是由模板编译而成。
 
-至于`vm.$createElement`，将它与官方文档中介绍的通过渲染函数创建vue实例所提到的`createElement`：
+至于`vm.$createElement`，将它与官方文档中介绍的通过渲染函数创建Vue实例所提到的`createElement`相比较：
 ![render](https://pic.downk.cc/item/5f549704160a154a670e7a4e.jpg)
 
-做比较，即可发现那里提到的`createElement`对应的正是这里的`vm.$createElement`方法。
+可以发现这里的`render`方法的`createElement`参数对应的正是这里的`vm.$createElement`方法。
 
-`vm.$createElement`是在vue实例初始化执行`_init(vm)`方法内的`initRender(vm)`时定义在实例上的：
+`vm.$createElement`是在Vue实例初始化阶段（`_init(vm)`）通过`initRender(vm)`定义在Vue实例上的：
 ```js
 // src/core/instance/render.js
 import { createElement } from '../vdom/create-element'
@@ -77,7 +77,7 @@ function initRender (vm) {
 }
 ```
 
-可以看到除了`$createElement`方法，实例上还定义了`vm._c`方法——这个方法是在`render`方法来自模板编译生成情况下使用的，而`$createElement`是在`render`方法来自手写情况下使用的，它们都是通过调用`createElement`实现的，区别在于最后一个参数分别为`true`和`false`：
+可以看到除了`$createElement`方法，实例上还定义了`vm._c`方法——这个方法是在`render`方法来自模板编译case使用的，而`$createElement`是在`render`方法来自手写情况下使用的，它们都是通过调用`createElement`实现的，区别在于最后一个参数分别为`true`和`false`：
 ```js
 // src/core/vdom/create-element
 function createElement (context, tag, data, children, normalizationType, alwaysNormalize) {
@@ -123,9 +123,7 @@ function _createElement (context, tag, data, children, normalizationType) {
 }
 ```
 
-`_createElement`在这里主要做了两件事：
-- `children`的规范化
-- `vnode`的创建
+`_createElement`是真正用于创建vnode的方法，它接收了几个描述vnode信息的参数，并在创建vnode之前先做了`children`的规范化处理。
 
 #### 2.1 children规范化
 `_createElement`方法接收的参数`children`可能是任意类型的，因此需要先将它们规范成`VNode`类型：
@@ -219,7 +217,7 @@ function normalizeArrayChildren (children, nestedIndex) {
 可以看到，`"嘿嘿"`和`"第二个"`两个文本节点被合并为一个vnode。总之，经过对`children`的规划化处理之后，`children`的每一项都为`VNode`类型对象。
 
 #### 2.2 vnode的创建
-回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作就是最关键的创建vnode：
+回到`_createElement`方法中，在对`children`做规范化处理之后，接下来的工作就是最关键的创建vnode：
 ```js
 let vnode
 if (typeof tag === 'string') {
@@ -248,12 +246,12 @@ if (typeof tag === 'string') {
 ### 总结
 至此，我们大致了解了实例的`_render`方法创建vnode的过程。每个vnode都有`children`，而`children`的每个元素又是一个vnode，这样就形成了一个`VNode Tree`，它可以简单的描述对应的`DOM Tree`。
 
-在这个过程中，要清醒的是，**实例vm和vnode是什么关系**？vnode是实例调用自身的`_render`方法生成的:
+在这个过程中，要清醒的是，**Vue实例和vnode是什么关系**？vnode是实例调用自身的`_render`方法生成的:
 ```js
 let vnode = render.call(vm._renderProxy, vm.$createElement)
 ```
 
-1. 开发者声明实例时提供的`render`（可能来自模板编译，也可能是来自手写）描述了实例的数据、DOM结构、事件等
-2. `render`通过将这些描述信息作为参数传递给`$createElement`生成真正的vnode
+1. 开发者声明Vue实例时提供的`render`（可能来自模板编译，也可能是来自手写）描述了实例的数据、DOM结构、事件等
+2. Vue实例的`$createElement`/`_c`方法接收了描述vnode信息的参数生成真正的vnode
 
 接下来将分析把这个vnode渲染成真实DOM的过程——`vm._update(vnode)`。
