--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -37,13 +37,12 @@ function initMixin (Vue) {
     // 所有Vue的实例都被标记_isVue = true，它的作用是避免实例被响应系统observe
     vm._isVue = true
 
-    // 将初始化实例提供的options、构造函数上的静态options合并到实例的$options上
+    // 将初始化实例提供的options、构造函数上的静态options合并到vm.$options上
     if (options && options._isComponent) {
       // _isComponent表示创建的是子组件实例，在3.2小节会再次讲到这一点
       // 因为动态选项合并非常慢，而且没有一个内部组件选项，需要特殊处理
       initInternalComponent(vm, options)
     } else {
-      // 普通实例，合并options给vm.$options
       vm.$options = mergeOptions(
         resolveConstructorOptions(vm.constructor),
         options || {},
