--- a/Vue源码/3.1-组件化-组件vnode的创建.md
+++ b/Vue源码/3.1-组件化-组件vnode的创建.md
@@ -1,8 +1,6 @@
 在数据驱动之外，Vue.js的另一个核心思想就是组件系统，接下来我们分析Vue的组件。
 
-<!-- 同样的，Vue组件要渲染到页面中去，也需要经历将组件转为`vnode`、`vnode`转为DOM的过程，本节将分析如何将组件转换为对应的`vnode`。 -->
-
-在上一小节中我们刚分析过，`createElement`方法在创建vnode时有这样一段逻辑：
+我们之前讨论过vnode的创建，`_createElement`方法中有这样一段逻辑：
 ```js
 function _createElement (context, tag, data, children, normalizationType) {
   // ... 规范化children逻辑
@@ -14,38 +12,37 @@ function _createElement (context, tag, data, children, normalizationType) {
     if (config.isReservedTag(tag)) {
       vnode = new VNode(config.parsePlatformTagName(tag), data, children, undefined, undefined, context)
     } else if ((!data || !data.pre) && isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
-      // 组件vnode
+      // 创建组件vnode
       vnode = createComponent(Ctor, data, context, children, tag)
     } else {
       vnode = new VNode(tag, data, children, undefined, undefined, context)
     }
   } else {
-    // 根vnode
+    // 创建组件vnode
     vnode = createComponent(tag, data, context, children)
   }
   return vnode
 }
 ```
 
-Vue的组件系统允许我们直接在模板中使用组件或者在手写渲染函数时以组件作为`tag`参数传给`createElement`，比如：
+Vue允许我们将组件作为参数传给`_createElement`，比如：
 ```js
 import Vue from 'vue'
 import App from './App.vue'
 
-var app = new Vue({
+const vm = new Vue({
   el: '#app',
   render: h => h(App)
 })
 ```
 
-`_createElement`这里传入的`tag`对应的是一个`App`对象，它对应的是一个组件：
+`vm._createElement`接收的参数`tag`在这里对应的是一个JavaScript对象，它代表一个组件：
 ![App](https://pic.downk.cc/item/5f57ac87160a154a67bb9b49.jpg)
 
-所以`_createElement`的逻辑会走到`createComponent(tag, data, context, children)`逻辑中去：
+所以`vm._createElement`的逻辑会走到`createComponent(tag, data, context, children)`逻辑中去：
 ```js
 // src/core/vdom/create-component.js
 function createComponent (Ctor, data, context, children, tag) {
-  // 根组件的context.$options._base为Vue
   const baseCtor = context.$options._base
   // 根据Ctor创建对应的组件构造函数
   if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
@@ -58,10 +55,8 @@ function createComponent (Ctor, data, context, children, tag) {
     if (Ctor === undefined) return createAsyncPlaceholder(asyncFactory, data, context, children, tag)
   }
 
-  // 组件vnode一定会有data属性
   data = data || {}
 
-  // 将v-model转为props
   if (isDef(data.model)) transformModel(Ctor.options, data)
     
   // 事件监听的处理
@@ -84,84 +79,99 @@ function createComponent (Ctor, data, context, children, tag) {
 ```
 
 在这里，我们更关心这三处核心逻辑：
-- 创建组件构造函数
+- 构建组件类
 - 安装组件钩子函数
 - 创建组件`vnode`
 
-### 1. 创建组件的构造函数
+### 1. 构建组件类（构造函数）
+这是一个比较有意思的地方，为什么要构建组件类？回到`_createElement`中来：
+```js
+const vm = new Vue({
+  el: '#app',
+  render: h => h(App)
+})
+```
+
+这里我们提供了一个组件`App`作为`_createElement`的参数，`App`描述了`vm`对应的vnode结构，`vm`的vnode转换为DOM依赖`vm._update`。那么组件`App`的vnode呢？同样的，它也是通过`App`组件实例的`_update`方法转为DOM，所以在这里需要做的事情是先创建`App`组件实例。而考虑到系统内组件的复用，会以组件类的形式去创建组件实例。
+
+组件类是通过`baseCtor.extend(Ctor)`创建的：
 ```js
 const baseCtor = context.$options._base
 
 if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
 ```
 
-对于上文提到初始化根实例`vm`的方式，`context.$options._base`指向构造函数`Vue`（`$options`的合并会在后面的小节讲到，这里先记住）。`Vue.extend(Ctor)`的作用是基于`Ctor`构造一个`Vue`的子类：
+对于上文提到根实例`vm`，`context.$options._base`自然指向了`Vue`。先来看`Vue.extend`（下面会看到所有组件类的`baseCtor.extend`方法都是对`Vue.extend`的拷贝）：
 ```js
 // src/core/global-api/extend.js
+Vue.cid = 0
+var cid = 0
+
 Vue.extend = function (extendOptions) {
   extendOptions = extendOptions || {}
   const Super = this
+  // 缓存组件类
   const SuperId = Super.cid
-
-  // 缓存基于该父类创建的子类，每次创建组件的实例时不必重复构造对应的组件类
   const cachedCtors = extendOptions._Ctor || (extendOptions._Ctor = {})
   if (cachedCtors[SuperId]) return cachedCtors[SuperId]
     
   const name = extendOptions.name || Super.options.name
 
-  // 定义子类构造函数
+  // 定义组件类构造函数，与Vue构造函数结构一致
   const Sub = function VueComponent (options) {
     this._init(options)
   }
   // 继承父类原型
   Sub.prototype = Object.create(Super.prototype)
   Sub.prototype.constructor = Sub
+
   Sub.cid = cid++
-  // 合并父类的静态属性 options 和 传入的 extendOptions，形成子类的静态属性 options
+
+  // options合并
   Sub.options = mergeOptions(
     Super.options,
     extendOptions
   )
-  // 将子类的静态属性super指向父类
+
   Sub['super'] = Super
 
-  // 通过Vue.extend得到的子类构造函数如SubVue创建的实例组件，组件对所有继承而来的共有的prop的访问将挂载在SubVue.prototype上，而SubVue.prototype定义的访问器属性最终拿到的是实例的this._props[key]
-  // 因此，通过将组件继承而来的共有prop挂载在原型链上，而仅在vm上挂载组件特有的prop。这样的设计，优化了对共有prop的访问性能
-
-  // 在 Sub.prototype 上添加 props 和 computed 的便捷访问
+  // 对组件实例的props[propName]的访问代理到propName上
   if (Sub.options.props) initProps(Sub)
+  // computed的响应式 + 访问代理
   if (Sub.options.computed) initComputed(Sub)
 
-  // 继承父类的静态方法
+  // 所有组件类的静态方法都是对Vue静态方法的拷贝
   Sub.extend = Super.extend
   Sub.mixin = Super.mixin
   Sub.use = Super.use
 
-  // 继承父类的静态资源方法component/directive/filter，用于注册全局的组件、指令、过滤器
+  // component/directive/filter
   ASSET_TYPES.forEach(function (type) {
     Sub[type] = Super[type]
   })
 
-  // 将子类自身注册为局部组件
+  // 将组件类维护在options.components上，所以Vue的组件可以递归调用自身
   if (name) Sub.options.components[name] = Sub
 
-  // 保持在继承时对父类Super.options的引用，以便于在之后实例化时检查Super.options是否更新过
+  // superOptions记录了对Super.options的拷贝，合并组件实例的options时会使用到该属性
   Sub.superOptions = Super.options
   Sub.extendOptions = extendOptions
   Sub.sealedOptions = extend({}, Sub.options)
 
-  // 缓存基于该父类创建的子类构造器
+  // 缓存基于该父类创建的组件类
   cachedCtors[SuperId] = Sub
   return Sub
 }
 ```
 
-`Vue.extend`的作用就是构造一个`Vue`的子类，它把一个纯对象转换一个继承于`Vue`的构造器`Sub`并返回，然后对`Sub`这个对象本身扩展了一些属性，如扩展`options`、添加全局API等；并且对配置中的`props`和`computed`做了初始化工作；最后对于这个`Sub`构造函数做了缓存，避免多次执行`Vue.extend`的时候对同一个子组件进行重复构造。
+可以看到，通过`Vue.extend`创建的组件类上保留了许多`Vue`的静态方法的拷贝，包括`Vue.extend`方法本身，它最终返回一个构造函数作为组件类。
+
+组件类构造好了在何时调用？当然是在创建组件实例时，对组件实例的创建的讨论放在下一节。
 
 ### 2. installComponentHooks
+组件类构件完毕后，下一步的工作是安装钩子。需要注意的是，这里的钩子指的是组件vnode上的钩子，而不是组件实例本身的生命周期钩子（组件实例此时还没有创建）：
 ```js
 const componentVNodeHooks = {
-  // 非keepAlive组件patch时触发 
   init (vnode, hydrating) {
     if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
       const mountedNode = vnode
@@ -191,7 +201,7 @@ function installComponentHooks (data) {
     const key = hooksToMerge[i]
     const existing = hooks[key]
     const toMerge = componentVNodeHooks[key]
-    // 在组件vnode的data上安装钩子函数
+    // 在组件vnode上安装钩子函数
     if (existing !== toMerge && !(existing && existing._merged)) {
       hooks[key] = existing ? mergeHook(toMerge, existing) : toMerge
     }
@@ -199,9 +209,10 @@ function installComponentHooks (data) {
 }
 ```
 
-整个`installComponentHooks`的过程就是把`init`、`prepatch`、`inserted`和`destroy`几个钩子合并到组件vnode的`data.hook`中，这些钩子函数将在组件vnode的`patch`阶段被调用，具体的钩子的逻辑将在组件`patch`过程中分析。
+`installComponentHooks`的过程就是把`init`、`prepatch`、`inserted`和`destroy`几个钩子合并到组件vnode的`data.hook`中，这些钩子将在组件实例的`patch`阶段被调用，具体的钩子的逻辑后续再做讨论。
 
 ### 3. 创建组件vnode
+组件vnode上的钩子处理完后，最后一步就是通过`VNode`实例化vnode：
 ```js
 var vnode = new VNode(
   ("vue-component-" + (Ctor.cid) + (name ? ("-" + name) : '')),
@@ -211,14 +222,16 @@ var vnode = new VNode(
 )
 ```
 
-在组件构造函数`Ctor`、`data.hook`处理完后就是创建组件vnode了，通过构造函数`VNode`实例化一个vnode并返回。要注意的是与普通元素节点vnode不同，**组件vnode是没有`children`的**，这点很关键。
+**在此之前构造的组件类构造函数Ctor以及钩子函数均被记录进了最终生成的组件vnode中**。
+
+要注意的是与普通元素节点vnode不同，**组件vnode是没有children的**，这一点很关键。
 
 ### 总结
-`createComponent`生成一个组件vnode涉及3个关键逻辑：
-- 构造组件实例的构造函数
-- 安装组件钩子函数
-- 实例化 vnode
+`createComponent`生成一个组件vnode涉及了3个关键操作：
+- 构造组件类
+- 安装组件vnode钩子函数
+- 实例化vnode
 
-组件的构造函数构造好了在何时调用呢？这个还要在下一节揭晓。
+与普通元素节点的vnode一样，组件vnode创建完后也会走到`patch`更新与之相对应的DOM逻辑中去，`patch`方法中关于组件的逻辑会在下一小节中讨论。
 
-与普通元素节点的vnode一样，组件vnode创建完后也会走到`vm._update`更新与之相对应的DOM逻辑中去，进而执行了`patch`，在前一小节已经对`_update`中的`patch`方法做了简单的分析，其中关于组件的`patch`会在下一小节中分析。
+另外，**组件vnode创建完毕时，组件实例还未创建**，组件vnode上记录了组件类构造函数，这个构造函数何时被调用，这个问题还要在下一节做解答。
