--- a/Vue源码/3.2-组件化-组件的update.md
+++ b/Vue源码/3.2-组件化-组件的update.md
@@ -1,6 +1,6 @@
-创建完vnode接下来的步骤是`vm._update`——将vnode转化为真实DOM。
+本节讨论组件vnode的`patch`。
 
-回顾`2.3`小节，在分析`update`内部调用的`createElm`方法(`vm._update -> vm.__patch__ -> createPatchFunction -> patch -> createElm`)的内部逻辑中：
+回顾`2.3`小节，vnode到DOM的实现借助了`createElm`方法：
 ```js
 function createElm (
   vnode,
@@ -11,7 +11,7 @@ function createElm (
   ownerArray,
   index
 ) {
-  // 尝试处理组件vnode
+  // 尝试以组件vnode处理
   if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) return
 
   // 非组件vnode的逻辑
@@ -21,13 +21,12 @@ function createElm (
 }
 ```
 
-第一步就是尝试处理组件vnode对应的`patch`，普通vnode则会跳过它。`createComponent`的逻辑：
+第一步就是尝试以组件vnode的方式做`patch`：
 ```js
 function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
   let i = vnode.data
   if (isDef(i)) {
     if (isDef(i = i.hook) && isDef(i = i.init)) {
-      // 创建组件vnode时有合并钩子函数的操作，因此组件vnode的data中包含了init钩子，满足此条件
       i(vnode, false)
     }
     if (isDef(vnode.componentInstance)) {
@@ -39,11 +38,17 @@ function createComponent (vnode, insertedVnodeQueue, parentElm, refElm) {
 }
 ```
 
-### init钩子
-回顾上一小节，组件类型的vnode在被创建时安装的`init`钩子，此时可以得到执行：
+在前一节中已经提到，组件vnode的创建前有钩子函数的安装步骤，所以对于组件vnode其`data.hook.init`一定存在。所以组件vnode的`patch`，会经历以下三步：
+1. 执行组件vnode的`init`钩子函数
+2. `initComponent`
+3. `insert`
+
+### 1. init钩子
+现在可以来看看`init`钩子做了哪些事情了：
 ```js 
 function init (vnode, hydrating) {
   if (vnode.componentInstance && !vnode.componentInstance._isDestroyed && vnode.data.keepAlive) {
+    // keep-alive组件
     const mountedNode = vnode
     componentVNodeHooks.prepatch(mountedNode, mountedNode)
   } else {
@@ -56,7 +61,8 @@ function init (vnode, hydrating) {
 }
 ```
 
-`init`钩子的内部逻辑很简单（暂不考虑`keepAlive`组件的情况），对于普通组件vnode，会先通过`createComponentInstanceForVnode`创建一个新的**子组件实例**（记为`ch`）：
+暂不考虑`keepAlive`的情况，这里会先通过`createComponentInstanceForVnode`创建**子组件实例**，前一节我们讨论的创建组件vnode前构造的组件类构造函数，在这里登场了：
+##### 1.1 createComponentInstanceForVnode创建子组件实例
 ```js
 function createComponentInstanceForVnode (vnode, parent) {
   var options = {
@@ -69,24 +75,27 @@ function createComponentInstanceForVnode (vnode, parent) {
     options.render = inlineTemplate.render
     options.staticRenderFns = inlineTemplate.staticRenderFns
   }
+  // vnode.componentOptions.Ctor为组件类构造函数
   return new vnode.componentOptions.Ctor(options)
 }
 ```
 
-在这里`vnode.componentOptions.Ctor`对应的是子组件实例`ch`的构造函数，前面一节已经讲到过，它是在`createComponent`中创建的，并在创建组件vnode时写入`vnode.componentOptions`中。另外需要注意实例化子组件实例`ch`的参数`options`：
+对于：
 ```js
-{
-  _isComponent: true,
-  _parentVnode: vnode,
-  parent: parent
-}
+const vm = new Vue({
+  el: '#app',
+  render: h => h(App)
+})
 ```
 
-`_isComponent`表示创建的Vue实例是一个**子组件**实例，`parent`表示**当前激活的组件实例**。
+创建子组件`App`实例（记为`child`）的参数：
+- `_isComponent`为`true`，区别于普通Vue实例
+- `_parentVnode`维护了对父实例vnode的引用，即`options._parentVnode = vnode`
+- `parent`维护了对父实例的引用，即`options.parent = vm`
+  
+子组件实例`child`创建完成后，父实例的vnode通过`componentInstance`维护了对`child`的引用——`vnode.componentInstance = child`。
 
-在通过组件vnode创建对应的根节点实例之后，将它赋给`vnode.componentInstance`来保留对子组件实例的引用。组件实例在`init`钩子执行完后`vnode.componentInstance`不为空，`createComponent`会返回`true`，阻断`createElm`中后续处理普通vnode的逻辑。因为组件的`update`操作本质是通过创建子组件实例，借助子组件实例的`$mount`实现组件实例本身的`update`。
-
-在继续分析`createComponent`执行完`init`钩子之后的流程之前，我们先回顾一下Vue实例的`_init`方法：
+下面我们来看刚刚构造的参数在实例化`child`过程中是如何作用的：
 ```js
 Vue.prototype._init = function (options) {
   const vm = this
@@ -104,14 +113,15 @@ Vue.prototype._init = function (options) {
     )
   }
 
-  initLifecycle(vm)
-  // 事件、状态初始化操作...
+  // 一系列事件、状态初始化操作...
+  // $mount挂载
 }
 ```
 
-创建子组件实例时，子组件的`_inti`方法会得到调用，对于子组件实例`options._isComponent`为`true`，走到`initInternalComponent`的流程中去：
+`options._isComponent`为`true`，所以`child.$options`的合并是由`initInternalComponent`完成的：
 ```js
 function initInternalComponent (vm, options) {
+  // 子组件实例的$options合并
   const opts = vm.$options = Object.create(vm.constructor.options)
   const parentVnode = options._parentVnode
   opts.parent = options.parent
@@ -129,13 +139,31 @@ function initInternalComponent (vm, options) {
   }
 }
 ```
-这里通过：
-- opts.parent = options._parent
-- opts._parentVnode = options._parentVnode
 
-将创建子组件实例时接收的几个参数合并到子组件实例的`$options`中去。
+`opts`为对`child.$options`的引用，对其进行写操作导致：
+- `child.$options.parent = options.parent`
+- `child.$options._parentVnode = options._parentVnode`
 
-再次回到组件的`init`钩子中，创建子组件实例`ch`后通过`ch.$mount`挂载子组件实例。子组件的`_render`：
+子组件实例`child.$options`上保留了对父组件实例`vm`以及`vm`对应的vnode的引用。这些引用的作用后面再做讨论。
+
+最后，由于初始化子组件实例`child`是不传`el`参数的：
+```js
+Vue.prototype._init = function (options) {
+  const vm = this
+  // $options初始化
+
+  // 一系列事件、状态初始化操作...
+
+  if (vm.$options.el) {
+    vm.$mount(vm.$options.el)
+  }
+}
+```
+
+所以`child.$mount`不是在`child._init`中调用的，它被放在了
+
+##### 1.2 挂载组件实例
+回到`init`钩子中，子组件实例`ch`创建后，通过`ch.$mount`挂载。子组件的`_render`：
 ```js
 Vue.prototype._render = function () {
   const vm = this
@@ -267,7 +295,7 @@ function createElm (
 
 而这一次我们传入的vnode是子组件vnode，如果最初组件的根节点是个普通元素，那么此时的子组件vnode也是普通的vnode，`createComponent`的返回值是`false`，接下来的过程就和之前普通vnode的`update`一样了——先创建一个父节点占位符，然后再遍历所有子vnode递归调用`createElm`。在遍历的过程中，如果遇到子vnode是一个组件类型的vnode，则又会进入本节介绍的组件update的流程。如此一来，通过递归的方式便可以完整地构建出整个组件DOM。
 
-### 子组件的initComponent和insert
+### 2. 组件的initComponent和insert
 回到组件的`createComponent`中，在组件的`init`钩子执行完后，会有一个子组件实例生成并被挂到`vnode.componentInstance`上，在子组件实例`vnode.componentInstance.$mount`执行之后：
 ```js
 if (isDef(vnode.componentInstance)) {
