--- a/Vue源码/3.3-组件化-合并options.md
+++ b/Vue源码/3.3-组件化-合并options.md
@@ -1,4 +1,4 @@
-通过之前的源码分析，现在我们知道，创建的Vue实例有两种：一种是手动调用`Vue`构造函数创建的全局的实例，另一种是在做组件vnode的`patch`过程中创建的子组件实例。
+通过之前的源码分析，现在我们知道，创建的Vue实例有两种：一种是手动调用`Vue`构造函数创建的全局的实例，另一种是在组件vnode的`patch`过程中创建的子组件实例。
 
 无论哪种方式创建Vue实例，都会调用实例的`_init(options)`方法，`_init`中首先有一段合并`options`的逻辑：
 ```js
@@ -7,7 +7,7 @@ Vue.prototype._init = function (options) {
     // 组件实例
     initInternalComponent(vm, options)
   } else {
-    // 非组件实例
+    // 非组件实例（根实例？
     vm.$options = mergeOptions(
       resolveConstructorOptions(vm.constructor),
       options || {},
@@ -22,14 +22,16 @@ Vue.prototype._init = function (options) {
 }
 ```
 
-这里是将创建实例时提供的参数与实例的构造函数上的静态属性`options`做合并处理，写到实例的`$options`上去。
+这里是将创建实例时提供的参数`options`与实例的构造函数的静态属性`options`合并到实例的`$options`上去。
 
-而根据实例的类型，`vm.$options`的合并处理又分为两种方式——`initInternalComponent`和`mergeOptions`。其中`initInternalComponent`在`3.2`小节已经分析过，本节仅分析`mergeOptions`的流程。
+<!-- 实例的构造函数的静态属性`options`是通过`resolveConstructorOptions(vm.constructor)`解析获取的，你可能会感到疑惑——实例的构造函数不就是Vue吗？那么对应的`options`不就是`Vue.options`吗？为什么还要去解析它？事实上，实例的构造函数并不一定是Vue，组件实例是通过组件构造函数创建的，不同的组件对应的构造你函数的`options`自然不同。 -->
 
-在分析`mergeOptions`合并实例的`$options`的实现之前，我们先看一看实例的构造函数上的静态属性`options`长什么样。
+<!-- 而根据实例的类型，`vm.$options`的合并处理又分为两种方式——`initInternalComponent`和`mergeOptions`。其中`initInternalComponent`在`3.2`小节已经分析过，本节仅分析`mergeOptions`的流程。 -->
+
+在分析合并方法`mergeOptions`之前，我们先看一看实例构造函数的静态属性`options`上都有什么。
 
 ### 1. Vue.options / VueComponent.options
-涉及`Vue.options`的写操作主要分散在两处。一个地方是在`initGlobalAPI(Vue)`中，它的主要作用是初始化Vue的一系列静态属性和方法，其中包含了`Vue.options`：
+涉及`Vue.options`的写操作主要分散在两处。一个是在`initGlobalAPI(Vue)`中，它初始化了Vue的一系列静态属性和方法，其中就包含`Vue.options`：
 ```js
 // src/core/global-api/index.js
 function initGlobalAPI (Vue) {
@@ -49,21 +51,30 @@ function initGlobalAPI (Vue) {
 }
 ```
 
-另一个地方是安装平台的runtime的`directives`和`components`时：
+其中`extend`是一个拷贝函数：
 ```js
-// src/platforms/web/runtime/index.js
-// 将platformDirectives、platformComponents对象上的属性拷贝到Vue.options.directives、Vue.options.components上
+function extend (to, _from) {
+  for (const key in _from) {
+    to[key] = _from[key]
+  }
+  return to
+}
+```
+
+另一个处是在`src/platforms/web/runtime/index.js`中：
+```js
+// 将platformDirectives、platformComponents对象上的属性分别拷贝到Vue.options.directives、Vue.options.components上
 extend(Vue.options.directives, platformDirectives)
 extend(Vue.options.components, platformComponents)
 ```
 
-最终，`Vue.options`长这个样子：
+关于`builtInComponents`、`platformDirectives`、`platformComponents`的具体结构我们暂且放到一边，`Vue.options`最终长这个样子：
 ![Vue.options](https://pic.downk.cc/item/5f588c47160a154a67f06d84.jpg)
 
-在`3.1`小节已经讲过，组件的构造函数是在创建组件实例之前通过`Ctor.extend(options)`构造的，相应的，组件构造函数的静态属性`options`也会继承父类的`options`。
+对于组件构造函数，之前已经讲过，**组件的构造函数是在创建组件实例之前通过Ctor.extend(options)生成的**。相应的，组件构造函数的静态属性`options`也会继承父类的`Ctor.options`，所以`Vue.options`也会被继承。
 
 ### 2. resolveConstructorOptions
-`resolveConstructorOptions`方法用来解析出构造函数的静态属性`options`：
+`resolveConstructorOptions`方法用来解析构造函数的静态属性`options`：
 ```js
 function resolveConstructorOptions (Ctor) {
   var options = Ctor.options
@@ -83,13 +94,16 @@ function resolveConstructorOptions (Ctor) {
 }
 ```
 
-对于构造函数Vue，因为`Vue.super`为空，所以直接返回`Vue.options`。而对于组件构造函数，其`options`的解析还需要根据其父类的options做额外的处理。
+对于构造函数Vue，因为`Vue.super`为空，所以直接返回`Vue.options`。而对于组件构造函数，其`options`的解析可能还需要递归其父类的`options`获得。
 
 ### 3. mergeOptions
-回到`mergeOptions`：
+回到合并`options`操作：
 ```js
 // src/core/util/options.js
 function mergeOptions (parent, child, vm) {
+  // parent对应实例构造函数options
+  // child 对应创建实例的options参数
+  // vm 对应实例对象
   if (typeof child === 'function') child = child.options
 
   // 对options.props、options.inject、options.directives做规范化处理
@@ -121,11 +135,11 @@ function mergeOptions (parent, child, vm) {
 }
 ```
 
-`mergeOptions`的主要作用是将`parent`、`child`合并成一个新的`options`并返回：
+合并`options`的过程：
 - 先递归调用`mergeOptions`将`child.extends`、`child.mixins`合并到`parent`上
-- 遍历`parent`、`child`的属性名`key`，通过调用`strats`中记录的对应的合并策略`strats[key]`。
+- 遍历`parent`、`child`，通过调用`strats`记录的对应的合并策略`strats[key]`。
 
-`strats`记录了各种`key`对应的合并策略，比如对于生命周期钩子`created`、`mounted`...，它们的合并策略是`mergeHook`：
+`strats`记录了`options`内各种参数对应的合并策略，比如对于生命周期钩子`created`、`mounted`，它们的合并策略是`mergeHook`：
 ```js
 const strats = Object.create(null)
 const LIFECYCLE_HOOKS = [
@@ -162,12 +176,21 @@ function mergeHook (parentVal, childVal) {
 }
 ```
 
-在经过一些列的options合并完之后，`vm.$options`差不多长这样：
+对于以下面这种方式创建Vue实例：
+```js
+new Vue({
+  el: '#app',
+  render: h => h(App),
+})
+```
+
+在经过一些列的options合并完之后，`vm.$options`被处理为：
+![合并options之后的vm](https://img.imgdb.cn/item/60410c4f360785be5489cd14.jpg)
+
+`render`、`el`来自创建实例提供的参数，而`components`/`directives`/`filters`/`_base`等来自`Vue.options`。
 
 ### 总结
-这一小节分析了`Vue`初始化阶段的`options`的合并过程，合并`optoins`的作用是将构造函数上的静态`options`与创建实例提供的`options`合并到所创建的实例的`$options`中。
-
-合并的场景有两种：
+这一小节分析了Vue实例初始化阶段的`options`的合并过程，合并的场景实际上有两种：
 - 子组件初始化时，通过`initInternalComponent`合并
 - 手动调用构造函数`Vue`时，通过`mergeOptions`合并
 
